--- a/app_i/src/main/AndroidManifest.xml
+++ b/app_i/src/main/AndroidManifest.xml
@@ -17,16 +17,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Widget.SurveyAndroid">
-        <activity
-            android:name=".SettingsActivity"
-            android:label="@string/title_activity_settings"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name=".NotificationPublisher" />
+        <!-- MainActivity is the parent for ResultActivity -->
+        <activity
+            android:name=".ResultActivity"
+            android:parentActivityName=".MainActivity">
+        </activity>
+        <receiver android:name = ".MyNotificationPublisher" />
+
         <activity android:name=".ExampleSurveyActivity" />
         <activity android:name=".SampleNewsActivity" />
         <activity android:name=".NetworkCheckerActivity" />
