--- a/app_i/src/main/AndroidManifest.xml
+++ b/app_i/src/main/AndroidManifest.xml
@@ -37,15 +37,15 @@
             tools:ignore="Instantiatable"></receiver>
         <receiver android:name=".DeviceUtil"
             tools:ignore="Instantiatable"></receiver>
-        <activity android:name=".TmpMainActivity"></activity>
-        <activity android:name=".NotificationDetailsActivity"></activity>
+        <activity android:name=".AddNotificationActivity"></activity>
+        <activity android:name=".NotificationDbViewActivity"></activity>
         <receiver android:name="NetworkChangeReceiver">
             <intent-filter>
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
             </intent-filter>
         </receiver>
-        <activity android:name=".NotificationListActivity" />
-        <service android:name=".NLService"
+        <activity android:name=".NotificationSettingActivity" />
+        <service android:name=".MyNotificationListenerService"
             android:label="@string/app_name"
             android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
             <intent-filter>
