--- a/app_i/build.gradle
+++ b/app_i/build.gradle
@@ -19,16 +19,16 @@ android {
         }
     }
 
-//    lintOptions {
-//        checkReleaseBuilds false
-//        abortOnError false
-//    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation project(":surveyandroid")
+//    implementation project(path: ':surveyandroid', onfiguration: 'default')
     implementation 'com.google.firebase:firebase-firestore:17.1.2'
     implementation 'androidx.multidex:multidex:2.0.1'
+    implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 }
