--- a/surveyandroid/build.gradle
+++ b/surveyandroid/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:21.4.3'
 //    implementation project(path: ':app_i')
 //    implementation project(path: ':app_i')
+//    implementation project(path: ':app_i')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
