--- a/app_i/build.gradle
+++ b/app_i/build.gradle
@@ -36,4 +36,6 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
+    //viewpage indicator
+//    implementation project(':library')
 }
