--- a/app_i/src/main/AndroidManifest.xml
+++ b/app_i/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Widget.SurveyAndroid">
-        <activity android:name=".MainActivity">
+        <activity android:name=".NewsMainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -28,10 +28,10 @@
         </activity>
         <receiver android:name = ".MyNotificationPublisherNews" />
 
-        <activity android:name=".ExampleSurveyActivity" />
+        <activity android:name=".BasicActivity" />
         <activity android:name=".NewsModuleActivity" />
-        <activity android:name=".NewsMainActivity" />
-        <activity android:name=".TestActivity" />
+        <activity android:name=".BasicNewsMainActivity" />
+        <activity android:name=".ExampleSurveyActivity" />
         <activity android:name=".NetworkCheckerActivity" />
         <receiver android:name=".receiever.ApplicationSelectorReceiver"></receiver>
         <receiver android:name=".receiever.ScreenStateReceiver"></receiver>
