--- a/app_i/src/main/AndroidManifest.xml
+++ b/app_i/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Widget.SurveyAndroid">
-        <activity android:name=".NewsOneActivity">
+        <activity android:name=".NewsAllActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -30,7 +30,7 @@
 
         <activity android:name=".BasicActivity" />
         <activity android:name=".NewsModuleActivity" />
-        <activity android:name=".NewsAllActivity" />
+        <activity android:name=".NewsOneActivity" />
         <activity android:name=".ExampleSurveyActivity" />
         <activity android:name=".NetworkCheckerActivity" />
         <receiver android:name=".receiever.ApplicationSelectorReceiver"></receiver>
