--- a/app_i/build.gradle
+++ b/app_i/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     //viewpage indicator
 //    implementation 'com.google.android.material:material:1.2.0-alpha05'
+    implementation 'androidx.preference:preference:1.1.1'
 }
