--- a/app_i/src/main/AndroidManifest.xml
+++ b/app_i/src/main/AndroidManifest.xml
@@ -28,10 +28,12 @@
         </activity>
         <receiver android:name = ".MyNotificationPublisherNews" />
 
+        <activity android:name=".SettingsActivity" />
         <activity android:name=".BasicActivity" />
         <activity android:name=".NewsModuleActivity" />
         <activity android:name=".NewsOneActivity" />
-        <activity android:name=".ExampleSurveyActivity" />
+        <activity android:name=".ExampleSurveyActivity"
+            android:theme="@style/Widget.SurveyAndroid"/>
         <activity android:name=".NetworkCheckerActivity" />
 
         <receiver android:name=".receiever.ApplicationSelectorReceiver" />
