--- a/app_i/src/main/AndroidManifest.xml
+++ b/app_i/src/main/AndroidManifest.xml
@@ -30,8 +30,10 @@
 
         <activity android:name=".SettingsActivity"
             android:theme="@style/AppThemeActionBar"/>
-        <activity android:name=".BasicActivity" />
-        <activity android:name=".NewsModuleActivity" />
+        <activity android:name=".BasicActivity"
+            android:theme="@style/AppThemeActionBar"/>
+        <activity android:name=".NewsModuleActivity"
+            android:theme="@style/AppThemeActionBar"/>
         <activity android:name=".NewsOneActivity" />
         <activity android:name=".ExampleSurveyActivity"
             android:theme="@style/Widget.SurveyAndroid"/>
@@ -52,7 +54,8 @@
                     tools:ignore="BatteryLife" />
             </intent-filter>
         </receiver>
-        <activity android:name=".NotificationSettingActivity" />
+        <activity android:name=".NotificationSettingActivity"
+            android:theme="@style/AppThemeActionBar"/>
         <service android:name=".MyNotificationListenerService"
             android:label="@string/app_name"
             android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
