--- a/app_i/build.gradle
+++ b/app_i/build.gradle
@@ -27,6 +27,9 @@ dependencies {
     implementation project(":surveyandroid")
 //    implementation project(path: ':surveyandroid', onfiguration: 'default')
     implementation 'com.google.firebase:firebase-firestore:17.1.2'
+//    implementation 'com.google.firebase:firebase-messaging'
+//    implementation platform('com.google.firebase:firebase-bom:26.8.0')
+//    implementation 'com.google.firebase:firebase-analytics'
     apply plugin: 'com.google.gms.google-services' // Google Services Gradle plugin
 
     // Apply the Crashlytics Gradle plugin
