--- a/app_i/src/main/AndroidManifest.xml
+++ b/app_i/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+
         <activity android:name=".NewsAllActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -38,24 +40,37 @@
         <activity android:name=".ExampleSurveyActivity"
             android:theme="@style/Widget.SurveyAndroid"/>
         <activity android:name=".NetworkCheckerActivity" />
+        <activity android:name=".NotificationSettingActivity"
+            android:theme="@style/AppThemeActionBar"/>
+        <activity android:name=".AddNotificationActivity"
+            android:theme="@style/AppThemeActionBar"/>
+        <activity android:name=".activity.NotificationDbViewActivity"
+            android:theme="@style/AppThemeActionBar"/>
+
+        <!--        <activity android:name=".ESMDbViewActivity"-->
+        <!--            android:theme="@style/AppThemeActionBar"/>-->
+        <!--        <activity android:name=".ESMJsonViewActivity"-->
+        <!--            android:theme="@style/AppThemeActionBar"/>-->
 
         <receiver android:name=".receiever.ApplicationSelectorReceiver" />
         <receiver android:name=".receiever.ScreenStateReceiver" />
         <receiver android:name=".receiever.ApplicationSelectorReceiver" />
         <receiver android:name=".receiever.BlueToothReceiver" />
-
-        <activity android:name=".AddNotificationActivity" />
-        <activity android:name=".activity.NotificationDbViewActivity" />
-        <activity android:name=".ESMDbViewActivity" />
-        <activity android:name=".ESMJsonViewActivity" />
         <receiver android:name=".receiever.NetworkChangeReceiver">
             <intent-filter>
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE"
                     tools:ignore="BatteryLife" />
             </intent-filter>
         </receiver>
-        <activity android:name=".NotificationSettingActivity"
+
+        <!-- Mention the service name here -->
+        <service android:name=".NewService"/>
+        <activity android:name=".MusicActivity"
             android:theme="@style/AppThemeActionBar"/>
+
+
+
+
         <service android:name=".MyNotificationListenerService"
             android:label="@string/app_name"
             android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
