--- a/app_i/build.gradle
+++ b/app_i/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         applicationId "com.recoveryrecord.surveyandroid"
         minSdkVersion 15
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
@@ -44,4 +44,6 @@ dependencies {
     //viewpage indicator
 //    implementation 'com.google.android.material:material:1.2.0-alpha05'
     implementation 'androidx.preference:preference:1.1.1'
+    // TODO: Review play services library required for activity recognition.
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
 }
