--- a/app_i/src/main/AndroidManifest.xml
+++ b/app_i/src/main/AndroidManifest.xml
@@ -11,6 +11,12 @@
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.VIBRATE"/>
+    <!-- Required to access activity recognition. -->
+    <!-- TODO: Add both activity recognition permissions to the manifest. -->
+    <!-- Required for 28 and below. -->
+    <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
+    <!-- Required for 29+. -->
+    <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION"/>
 
     <application
         android:name="androidx.multidex.MultiDexApplication"
@@ -79,6 +85,8 @@
             android:theme="@style/AppThemeActionBar"/>
         <activity android:name=".activity.NotificationDbViewActivity"
             android:theme="@style/AppThemeActionBar"/>
+        <activity android:name=".PermissionRationalActivity"/>
+        <activity android:name=".MainActivity"/>
 
         <!--        <activity android:name=".ESMDbViewActivity"-->
         <!--            android:theme="@style/AppThemeActionBar"/>-->
@@ -97,8 +105,8 @@
         </receiver>
 
         <!-- Mention the service name here -->
-        <service android:name=".NewService"/>
-        <activity android:name=".MusicActivity"
+        <service android:name=".NewsService"/>
+        <activity android:name=".TestServiceActivity"
             android:theme="@style/AppThemeActionBar"/>
 
 
