--- a/app_i/src/main/AndroidManifest.xml
+++ b/app_i/src/main/AndroidManifest.xml
@@ -26,9 +26,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-
-        <activity android:name=".NewsAllActivity">
+        <activity android:name=".NewsHybridActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -87,7 +85,7 @@
             android:theme="@style/AppThemeActionBar"/>
         <activity android:name=".ActivityRecognitionPermissionRationalActivity"/>
         <activity android:name=".TestActivityRecognitionActivity"/>
-        <activity android:name=".NewHybridActivity"/>
+        <activity android:name=".NewsAllActivity"/>
 
         <!--        <activity android:name=".TestESMDbViewActivity"-->
         <!--            android:theme="@style/AppThemeActionBar"/>-->
