--- a/app_i/build.gradle
+++ b/app_i/build.gradle
@@ -47,4 +47,6 @@ dependencies {
     implementation 'androidx.preference:preference:1.1.1'
     // TODO: Review play services library required for activity recognition.
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+    //reload
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
 }
