--- a/app_i/build.gradle
+++ b/app_i/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation project(":surveyandroid")
 //    implementation project(path: ':surveyandroid', onfiguration: 'default')
     implementation 'com.google.firebase:firebase-firestore:17.1.2'
+    implementation 'androidx.viewpager:viewpager:1.0.0'
 //    implementation 'com.google.firebase:firebase-messaging'
 //    implementation platform('com.google.firebase:firebase-bom:26.8.0')
 //    implementation 'com.google.firebase:firebase-analytics'
