--- a/app_i/src/main/AndroidManifest.xml
+++ b/app_i/src/main/AndroidManifest.xml
@@ -123,6 +123,7 @@
         <activity android:name=".TestServiceActivity"
             android:theme="@style/AppThemeActionBar"/>
         <activity android:name=".TestDoubleBarActivity" />
+        <activity android:name=".LoadingPageActivity" />
 
 
 
